--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>webpage3</title>
-  <link rel="icon" type="image/png" href="https:.//iconarchive.com/show/free-space-icons-by-goodstuff-no-nonsense/alien-2-icon.html">
+  <link rel="icon" type="image/png" href="https:.alien-2-icon.png">
 </head>
   
 <body>
