--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>webpage3</title>
-  <link rel="icon" type="image/png" href="https:.alien-2-icon.png">
+  <link rel="icon" type="image/png" href="https:./alien-2-icon.png">
 </head>
   
 <body>
